--- a/src/app/account/login.component.html
+++ b/src/app/account/login.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <h4 class="card-header">Log in to Visualization Platform</h4>
+    <h4 class="card-header">Log in</h4>
     <div class="card-body">
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <div class="form-group">
