--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -10,18 +10,20 @@
     </div-->
     <mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
         <mdb-carousel-item>
-            <img class="carousel-img" src="../../assets/image/1.jpg" alt="First slide">
+            <img class="carousel-img" src="../../assets/image/1.jpg" alt="First slide" style="max-height: 600px; max-width: 100%;object-fit: cover;">
         </mdb-carousel-item>
         <mdb-carousel-item>
-            <img class="carousel-img" src="../../assets/image/2.jpg" alt="Second slide">
+            <img class="carousel-img" src="../../assets/image/2.jpg" alt="Second slide" style="max-height: 600px; max-width: 100%;object-fit: cover;">
         </mdb-carousel-item>
         <mdb-carousel-item>
-            <img class="carousel-img" src="../../assets/image/3.jpg" alt="Third slide">
+            <img class="carousel-img" src="../../assets/image/3.jpg" alt="Third slide" style="max-height: 600px; max-width: 100%;object-fit: cover;">
         </mdb-carousel-item>
     </mdb-carousel>
-
+    
+    image : <a href="http://www.freepik.com">Designed by fullvector / Freepik</a>
+    
     <div class="text-center p-3">
-        <a routerLink="/tutorial"><button class="button" type="submit"><span>Get Started </span></button></a>
+       <a routerLink="/tutorial"><button class="button" type="submit"><span>Get Started </span></button></a>
     </div>
     
 
