--- a/src/app/account/layout.component.html
+++ b/src/app/account/layout.component.html
@@ -1,3 +1,7 @@
 <div class="col-md-4 offset-md-4 mt-5">
+    <div class="row mx-5 my-3">
+        <img src="../../assets/image/logo_transparent.png" style="width: 100px; height: 100px;">
+        <h1 class="align-middle" style="margin: auto">Visualization Platform</h1>
+    </div>
     <router-outlet></router-outlet>
 </div>
