--- a/src/app/generate/result.component.html
+++ b/src/app/generate/result.component.html
@@ -10,7 +10,7 @@
             <a [href]="pptUrl"><button class="btn btn-success" >View Full Size</button></a>
         </div>
         <div class="row mt-3 ml-4">
-            <label for="pptUrl">Powerpoint embed URL :</label>
+            <label for="pptUrl">API URL :</label>
         </div>
         <div class="row justify-content-center">
             <input  id="pptUrl" type="text" class="form-control" [value]="pptUrl" style="width: 80%;" readonly>
