--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -75,9 +75,8 @@
                     </owl-carousel-o>
                 </div>
             </div>
-
-
         </div>
+
         <div class="col-md-4 mb-5">
             <div class="card mb-4" *ngIf="role == 'user' ||  role == 'designer'">
                 <h4 class="card-header">Manage your visualizations</h4>
@@ -104,7 +103,8 @@
                             <tr *ngFor="let item of items">
                                 <td>{{item.refId}}</td>
                                 <td>{{item.template}}</td>
-                                <td>{{item.status}}</td>
+                                <td><p class="text-success" *ngIf="item.status == 'active'">{{item.status}}</p>
+                                    <p class="text-warning" *ngIf="item.status == 'inactive'">{{item.status}}</p></td>
                                 <td style="white-space: nowrap">
                                     <a routerLink="/generate/result/{{item.refId}}" class="btn btn-sm btn-primary mr-1"
                                         *ngIf="item.status=='active'">View</a>
@@ -161,20 +161,23 @@
                 <h4 class="card-header">FAQ</h4>
                 <div class="card-body ml-5 mr-5 mt-3">
                     <p class="mr-5"><strong>Q : What is Visualization Platform ?</strong><br>
-                        A : Visualization Platform is a platform that provide a way to create interactive visualization easily for everyone.
+                        A : Visualization Platform is a platform that provides a way to create interactive visualization easily for everyone.
                     </p>
                     <p class="mr-5"><strong>Q : Why Visualization Platform ?</strong><br>
-                        A : You can create variety of interactive visualization. Just hand us some data and configuration. 
+                        A : You can create a variety of interactive visualization. Just hand us some data and a little configuration. 
                     </p>
                     <p class="mr-5"><strong>Q : How can I create a visualization ?</strong><br>
                         A : You can learn more about how to create a visualization <a routerLink="/tutorial"><u>Here</u></a>. We made a guide for you.  
                     </p>
                     <p class="mr-5"><strong>Q : I generated a visualization but nothing is showing, What I did wrong ?</strong><br>
-                        A : We require a specific data and config file format for each templates <a routerLink="/tutorial"><u>Learn more</u></a>. And we currently support only csv and json files. 
+                        A : We require a specific data and config file format for each template <a routerLink="/tutorial"><u>Learn more</u></a>. And we currently support only CSV and JSON files. 
+                    </p>
+                    <p class="mr-5"><strong>Q : How can I use the generated visualization ?</strong><br>
+                        A : You can use it on your websites with <strong>&lt;embed&gt;</strong> or <strong> &lt;iframe&gt;</strong> <a href="https://www.w3schools.com/tags/tag_iframe.asp"><u> see more (w3schools)</u></a>. You can also use it on your Microsoft PowerPoint presentation.
                     </p>
                 </div>
             </div>
-        </div>
+        </div> 
     </div>
 
 </div>
