--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
   </ul>
 </nav>
 
-<nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="user&&user.role=='admin'">
+<nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="user&&user.role=='admin' || user&&user.role=='superadmin'">
   <div class="navbar-nav">
       <a class="nav-item nav-link" routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
       <a class="nav-item nav-link" routerLink="/users" routerLinkActive="active">Users</a>
