--- a/src/app/tutorial-th/tutorial-th.component.html
+++ b/src/app/tutorial-th/tutorial-th.component.html
@@ -118,9 +118,9 @@
                                         <td>{{template.TemplateName}}</td>
                                         <td>
                                             <a
-                                                href="{{apiUrl}}/example-files/{{template.TemplateName}}-data.csv">{{template.TemplateName}}-data.csv</a><br>
+                                                href="{{apiUrl}}/static/example-files/{{template.TemplateName}}-data.csv">{{template.TemplateName}}-data.csv</a><br>
                                             <a
-                                                href="{{apiUrl}}/example-files/{{template.TemplateName}}-config.csv">{{template.TemplateName}}-config.csv</a>
+                                                href="{{apiUrl}}/static/example-files/{{template.TemplateName}}-config.csv">{{template.TemplateName}}-config.csv</a>
                                         </td>
                                     </tr>
                                 </tbody>
