--- a/src/app/generate/generate.component.html
+++ b/src/app/generate/generate.component.html
@@ -9,7 +9,7 @@
                         <div class="row d-flex justify-content-start ml-5">
                         <div *ngFor="let template of templates">
                             <div class="card m-5" style="width: 20rem;">
-                                <img class="card-img-top" src="{{apiUrl}}/{{template.TemplateName}}.png"
+                                <img class="card-img-top" src="{{apiUrl}}/static/{{template.TemplateName}}.png"
                                     alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title">{{template.TemplateName}}</h5>
@@ -126,7 +126,7 @@
             <mat-step>
                 <ng-template matStepLabel><h5>Summary</h5></ng-template>
                 <div class="col-md-4 offset-md-4 text-center">
-                    <img class="card-img-top mt-5" src="{{apiUrl}}/{{firstFormGroup.get('vname').value}}.png" alt="template img">
+                    <img class="card-img-top mt-5" src="{{apiUrl}}/static/{{firstFormGroup.get('vname').value}}.png" alt="template img">
                     <div>
                         <p class="row mt-5">Please confirm your settings for the visualization before generate.</p>
                         <div class="row">
