--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -85,7 +85,7 @@
                         <a routerLink="/generate" class="btn btn-success btn-success mb-2 ml-3">+ Generate New
                             Visualization</a>  
                         <div class="ml-auto mr-3 mt-2">
-                            <p>You have active : {{count}}/20 Visualizations</p>
+                            <p>You have active : {{countActive}}/20 Visualizations</p>
                         </div>
                     </div>
 
